--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project_Starter</title>
+    <title>Server Side Calculator</title>
+    <script src="./script/jquery-3.6.0.min.js"></script>
+    <script src="./script/client.js"></script>
+    <link rel="stylesheet" href="./style_sheet/stylesheet.css">
 </head>
 <body>
+    <header class="title">
+        <div class="container">
+            <h1>Server Side Calculator</h1>
+        </div>
+    </header>    
     
-    <script src="jquery-3.6.0.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
