--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,7 +14,41 @@
         <div class="container">
             <h1>Server Side Calculator</h1>
         </div>
-    </header>    
+    </header>
+    <main>
+        <section class="server-side-cal_section">
+            <div class="container">
+                <!-- beginning of form -->
+                <form id="server-side-cal_form" >
+                    <div class="row">
+                        <input type="number" id="input_1">
+                        <!-- Addition button -->
+                        <button class="operator">+</button>
+                        <!-- subtraction button -->
+                        <button class="operator">-</button>
+                        <!-- multiplication button -->
+                        <button class="operator">X</button>
+                        <!--division button -->
+                        <button class="operator">/</button>
+                        <!-- button -->
+                        <input type="number" name="" id="input_2">
+                        <button>=</button>
+                        <button>C</button>
+                    </div>   
+                </form>
+                <!-- end of form -->
+            </div>
+        </section>
+        <section class="server-side-cal_results">
+            <div class="container history">
+                <h2>Results:</h2>
+                <p>
+                    <span>1</span><span>+</span><span>2</span> = <span>3</span>
+                </p>
+
+            </div>
+        </section>
+    </main>    
     
 </body>
 </html>
