--- a/server/public/index.html
+++ b/server/public/index.html
@@ -41,11 +41,13 @@
         </section>
         <section class="server-side-cal_results">
             <div class="container history">
-                <h2>Results:</h2>
-                <p>
-                    <span>1</span><span>+</span><span>2</span> = <span>3</span>
-                </p>
-
+                <h2>Results: <span id="latest_result"></span></h2>
+                <div class="results">
+                    <p>
+                        <span>1</span><span>+</span><span>2</span> = <span>3</span>
+                    </p>
+                </div>
+                
             </div>
         </section>
     </main>    
