--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,16 +23,16 @@
                     <div class="row">
                         <input type="number" id="input_1">
                         <!-- Addition button -->
-                        <button class="operator">+</button>
+                        <button data-add="+" id="add" class="operator">+</button>
                         <!-- subtraction button -->
-                        <button class="operator">-</button>
+                        <button data-sub="-" id="sub" class="operator">-</button>
                         <!-- multiplication button -->
-                        <button class="operator">X</button>
+                        <button data-multi="x" id="multi" class="operator">x</button>
                         <!--division button -->
-                        <button class="operator">/</button>
+                        <button data-divide="/" id="divide" class="operator">/</button>
                         <!-- button -->
                         <input type="number" name="" id="input_2">
-                        <button>=</button>
+                        <button id="calculate">=</button>
                         <button>C</button>
                     </div>   
                 </form>
