created and tested clear function

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,7 +33,7 @@
                         <!-- button -->
                         <input type="number" name="" id="input_2">
                         <button id="calculate">=</button>
-                        <button>C</button>
+                        <button id="clear">C</button>
                     </div>   
                 </form>
                 <!-- end of form -->
