refactor data attribute and remove findkey function

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,13 +23,13 @@
                     <div class="row">
                         <input type="number" id="input_1">
                         <!-- Addition button -->
-                        <button data-add="+" id="add" class="operator">+</button>
+                        <button data-op="+" id="add" class="operator">+</button>
                         <!-- subtraction button -->
-                        <button data-sub="-" id="sub" class="operator">-</button>
+                        <button data-op="-" id="sub" class="operator">-</button>
                         <!-- multiplication button -->
-                        <button data-multi="x" id="multi" class="operator">x</button>
+                        <button data-op="x" id="multi" class="operator">x</button>
                         <!--division button -->
-                        <button data-divide="/" id="divide" class="operator">/</button>
+                        <button data-op="/" id="divide" class="operator">/</button>
                         <!-- button -->
                         <input type="number" name="" id="input_2">
                         <button id="calculate">=</button>
