--- a/server/public/index.html
+++ b/server/public/index.html
@@ -21,7 +21,7 @@
                 <!-- beginning of form -->
                 <form id="server-side-cal_form" >
                     <div class="row">
-                        <input  id="input_1" value="">
+                        <input  id="input_1" value="" disabled>
                         <!-- clear button -->
                         <button id="clear">C</button>   
                     </div>
