added hover and mouseEvent function

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,7 +23,8 @@
                     <div class="row">
                         <input  id="input_1" value="" disabled>
                         <!-- clear button -->
-                        <button id="clear">C</button>   
+                        <button id="clear">C</button>
+                        <button id="delete">D</button>   
                     </div>
                     <div class="row">
                         <button data-number="7" class="number">7</button>
@@ -57,6 +58,7 @@
                 </form>
                 <!-- end of form -->
             </div>
+            
         </section>
         <section class="server-side-cal_results">
             <div class="container history">
